--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<title>Table of Contents</title>
 	</head>
 
-	<body class="text-black">
+	<body>
 		<div class="title">
 			<h1 class="text-center">TABLE</h1>
 		</div>
@@ -221,6 +221,37 @@
 				</div>
 			</nav>
 		</div>
+
+		<section id="contact">
+			<div class="container">
+				<form action="contactform.php" class="contact-form" method="POST">
+					<div class="form-group">
+						<label for="name"></label>
+						<input type="text" id="name" name="name" placeholder="Your name">
+					</div>
+					<div class="form-group">
+						<label for="email"></label>
+						<input type="email" id="email" name="email" placeholder="Your email">
+					</div>
+					<div class="form-group">
+						<label for="subject"></label>
+						<input type="text" id="subject" name="subject" placeholder="Subject">
+					</div>
+					<div class="form-group">
+						<label for="message"></label>
+						<textarea name="message" id="message" cols="30" rows="5" placeholder="please leave a message"></textarea>
+					</div>
+					<div class="form-group">
+						<button type="submit">Submit</button>
+					</div>
+				</form>
+			</div>
+			<div id="status" class="error">
+				Message Sent!
+			</div>
+		</section>
+
+
 		<div class="backgroundImage"></div>
 		<!-- <img src="https://images.unsplash.com/photo-1623261599970-4885dd67eb3c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"> -->
 
@@ -237,5 +268,6 @@
 		<!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    --></body>
+    -->
+	</body>
 </html>
