--- a/index.html
+++ b/index.html
@@ -224,14 +224,14 @@
 
 		<section id="contact">
 			<div class="container">
-				<form action="contactform.php" class="contact-form" method="POST">
+				<form action="https://formspree.io/f/xgernvrd" class="contact-form" method="POST">
 					<div class="form-group">
 						<label for="name"></label>
 						<input type="text" id="name" name="name" placeholder="Your name">
 					</div>
 					<div class="form-group">
 						<label for="email"></label>
-						<input type="email" id="email" name="email" placeholder="Your email">
+						<input type="email" id="email" name="emailFrom" placeholder="Your email">
 					</div>
 					<div class="form-group">
 						<label for="subject"></label>
@@ -239,16 +239,14 @@
 					</div>
 					<div class="form-group">
 						<label for="message"></label>
-						<textarea name="message" id="message" cols="30" rows="5" placeholder="please leave a message"></textarea>
+						<textarea name="message" id="message" cols="30" rows="5" placeholder="Pleave a message"></textarea>
 					</div>
 					<div class="form-group">
 						<button type="submit">Submit</button>
 					</div>
 				</form>
 			</div>
-			<div id="status" class="error">
-				Message Sent!
-			</div>
+			
 		</section>
 
 
