--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 								>
 							</li>
 
-							<li class="nav-item">
-								<a class="nav-link" href="#" target="_blank"
+							<li class="nav-item" id="contact-point">
+								<a class="nav-link" href="#" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
 									>Contact</a
 								>
 							</li>
@@ -222,7 +222,7 @@
 			</nav>
 		</div>
 
-		<section id="contact">
+		<section id="contact" class="displaynone">
 			<div class="container">
 				<form action="https://formspree.io/f/xgernvrd" class="contact-form" method="POST">
 					<div class="form-group">
@@ -249,8 +249,11 @@
 			
 		</section>
 
+		<section id="resume" 
+
 
 		<div class="backgroundImage"></div>
+		
 		<!-- <img src="https://images.unsplash.com/photo-1623261599970-4885dd67eb3c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"> -->
 
 		<!-- Optional JavaScript; choose one of the two! -->
@@ -267,5 +270,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     -->
+		<script src="script.js"></script>
 	</body>
 </html>
