--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 					</div>
 					<div class="form-group">
 						<label for="message"></label>
-						<textarea name="message" id="message" cols="30" rows="5" placeholder="Pleave a message"></textarea>
+						<textarea name="message" id="message" cols="30" rows="5" placeholder="Pleave leave a message"></textarea>
 					</div>
 					<div class="form-group">
 						<button type="submit">Submit</button>
@@ -249,7 +249,9 @@
 			
 		</section>
 
-		<section id="resume" 
+		<section id="resume">
+
+		</section> 
 
 
 		<div class="backgroundImage"></div>
