implementing resume page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						aria-expanded="false"
 						aria-label="Toggle navigation"
 					>
-						<span> ABOUT </span>
+						<span id="about"> ABOUT ME </span>
 					</button>
 
 					<div
@@ -250,7 +250,15 @@
 		</section>
 
 		<section id="resume">
-
+			<div class="left_side">
+				<div class="profilePage">
+					<div class="imgBx">
+						<img src="img.png" alt="">
+					</div>
+					<h4>Jun Hwang<br><span>Web Developer</span></h4>
+				</div>
+			</div>
+			<div class="right_side"></div>
 		</section> 
 
 
