--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div class="navContainer">
 			<nav class="navbar">
 				<div class="container-fluid" style="justify-content: center">
-					<div class="bottondiv">
+					<div class="buttondiv">
 						<button
 							class="navbar-toggler"
 							type="button"
