--- a/index.html
+++ b/index.html
@@ -532,7 +532,43 @@
 		</section> 
 
 
-		<div class="backgroundImage"></div>
+		<div id="carouselExampleInterval" class="carousel slide m-5" data-bs-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active" data-bs-interval="8000">
+					<img src="https://images.unsplash.com/photo-1516646227334-6102731f3c25?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="d-block mx-auto w-50 rounded-3" alt="...">
+					<div class="carousel-caption d-none d-md-block text-wrap w-50 mx-auto">
+						<p>Take the risk of thinking for yourself - much more happiness, truth, beauty, <br> and wisdom will come to you that way</p>
+        				<h5>Christopher Hitchens</h5>
+					</div>
+				</div>
+				<div class="carousel-item" data-bs-interval="8000">
+					<img src="https://images.unsplash.com/photo-1535428590452-00784a2a7a26?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1350&q=80" class="d-block mx-auto w-50 rounded-3" alt="...">
+					<div class="carousel-caption d-none d-md-block text-wrap w-50 mx-auto">
+						<p>One letter is enough for me to transcend and face you to speak <br>
+							as the wind blows past the night uses its own blood to write a secret verse <br>
+							that reminds me each word is the last word<br><br> -Liu Xiaobo-</p>
+      				</div>
+				</div>
+				<div class="carousel-item" data-bs-interval="7000">
+					<img src="https://images.unsplash.com/photo-1477346611705-65d1883cee1e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="d-block mx-auto w-50 rounded-3" alt="...">
+					<div class="carousel-caption d-none d-md-block text-wrap w-50 mx-auto">
+        				<h5>1984</h5>
+        				<p>Not merely the validity of experience, <br> but the very existence of external reality was tacitly denied by their philosophy. <br><br>
+							- Winston -
+						</p>
+      				</div>
+				</div>
+				<div class="carousel-item" data-bs-interval="8000">
+					<img src="https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1352&q=80" class="d-block mx-auto w-50 rounded-3" alt="...">
+					<div class="carousel-caption d-none d-md-block text-wrap w-50 mx-auto">
+        				<h5>Carl Sagan on Astronomy</h5>
+        				<p>
+							To me, it underscores our responsibility to deal more kindly with one another,
+							and to preserve and cherish the pale blue dot, the only home we've ever known.</p>
+      				</div>
+				</div>
+			</div>
+		</div>
 		
 		<!-- <img src="https://images.unsplash.com/photo-1623261599970-4885dd67eb3c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"> -->
 
