updating some functionality

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 			<div class="left_side">
 				<div class="profilePage">
 					<div class="imgBx">
-						<img src="img.png" alt="">
+						<img src="penguin.jpg" alt="">
 					</div>
 					<h5>JUN HWANG<br><span>WEB DEVELOPER</span></h5>
 				</div>
@@ -394,7 +394,7 @@
 					<ul>
 						<li>
 							<span class="icon"></span>
-							<span class="text">+1 647 898 4896</span>
+							<span class="text">+1 404 513 2917</span>
 						</li>
 						<li>
 							<span class="icon"></span>
@@ -402,7 +402,7 @@
 						</li>
 						<li>
 							<span class="icon"></span>
-							<span class="text">Toronto, ON</span>
+							<span class="text">ATLANTA, GA</span>
 						</li>
 						
 					</ul>
