--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 	</head>
 
 	<body>
-		<div class="title">
+		<div id="transparent"></div>
+		<div class="title" id="title">
 			<h1 class="text-center">Welcome To My Portfolio Website</h1>
 		</div>
 		<div class="navContainer" id="navbarSupportedContent">
@@ -48,8 +49,8 @@
 						data-bs-parent="#navbarSupportedContent"
 					>
 						<ul class="navbar-nav .col-md-6 .offset-md-3">
-							<li class="nav-item" id="resume-point">
-								<a class="nav-link" href="#" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
+							<li class="nav-item" >
+								<a id="resume-link" class="nav-link" href="#" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
 									>Resume</a
 								>
 							</li>
@@ -70,8 +71,8 @@
 								>
 							</li>
 
-							<li class="nav-item" id="contact-point">
-								<a class="nav-link" href="#" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
+							<li class="nav-item" >
+								<a id="contact-link" class="nav-link" href="#" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
 									>Contact</a
 								>
 							</li>
@@ -361,34 +362,11 @@
 			</nav>
 		</div>
 
-		<section id="contact" class="displaynone">
-			<div class="container">
-				<form action="https://formspree.io/f/xgernvrd" class="contact-form" method="POST">
-					<div class="form-group">
-						<label for="name"></label>
-						<input type="text" id="name" name="name" placeholder="Your name">
-					</div>
-					<div class="form-group">
-						<label for="email"></label>
-						<input type="email" id="email" name="emailFrom" placeholder="Your email">
-					</div>
-					<div class="form-group">
-						<label for="subject"></label>
-						<input type="text" id="subject" name="subject" placeholder="Subject">
-					</div>
-					<div class="form-group">
-						<label for="message"></label>
-						<textarea name="message" id="message" cols="30" rows="5" placeholder="Pleave leave a message"></textarea>
-					</div>
-					<div class="form-group">
-						<button type="submit">Submit</button>
-					</div>
-				</form>
-			</div>
-			
-		</section>
+		
 
 		<section id="resume" class="resume displaynone1">
+			<div class="close-button" id="resume-close-button">
+				</div>
 			<div class="left_side">
 				<div class="profilePage">
 					<div class="imgBx">
@@ -465,7 +443,9 @@
 					</ul>
 				</div>
 			</div>
+			
 			<div class="right_side">
+				
 				<div class="about">
 					<h4 class="title">Profile</h4>
 					<ul>
@@ -538,8 +518,36 @@
 			</div>
 		</section> 
 
+		<section id="contact" class="displaynone">
+			<div class="container">
+				<form action="https://formspree.io/f/xgernvrd" class="contact-form" method="POST">
+					<div class="close-button" id="contact-close-button"></div>
+					<div class="form-group">
+						<label for="name"></label>
+						<input type="text" id="name" name="name" placeholder="Your name">
+					</div>
+					<div class="form-group">
+						<label for="email"></label>
+						<input type="email" id="email" name="emailFrom" placeholder="Your email">
+					</div>
+					<div class="form-group">
+						<label for="subject"></label>
+						<input type="text" id="subject" name="subject" placeholder="Subject">
+					</div>
+					<div class="form-group">
+						<label for="message"></label>
+						<textarea name="message" id="message" cols="30" rows="5" placeholder="Pleave leave a message"></textarea>
+					</div>
+					<div class="form-group">
+						<button type="submit">Submit</button>
+					</div>
+				</form>
+			</div>
+			
+		</section>
 
-		<div id="carouselExampleInterval" class="carousel slide m-5" data-bs-ride="carousel">
+
+		<div id="carouselExampleInterval" class="carousel slide m-5 col-md-8 mx-auto" data-bs-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active" data-bs-interval="8000">
 					<img src="https://images.unsplash.com/photo-1516646227334-6102731f3c25?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="d-block mx-auto w-50 rounded-3" alt="...">
